--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@types/node": "20.4.2",
@@ -19,7 +21,20 @@
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@storybook/addon-essentials": "7.0.27",
+    "@storybook/addon-interactions": "7.0.27",
+    "@storybook/addon-links": "7.0.27",
+    "@storybook/addon-styling": "^1.3.4",
+    "@storybook/blocks": "7.0.27",
+    "@storybook/nextjs": "7.0.27",
+    "@storybook/react": "7.0.27",
+    "@storybook/testing-library": "0.0.14-next.2",
+    "eslint-plugin-storybook": "^0.6.12",
+    "storybook": "7.0.27"
   }
 }
