--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "chromatic": "npx chromatic --project-token=chpt_5bf0a48f0aab671"
   },
   "dependencies": {
     "@types/node": "20.4.2",
@@ -34,7 +35,10 @@
     "@storybook/nextjs": "7.0.27",
     "@storybook/react": "7.0.27",
     "@storybook/testing-library": "0.0.14-next.2",
+    "chromatic": "^6.20.0",
     "eslint-plugin-storybook": "^0.6.12",
     "storybook": "7.0.27"
-  }
+  },
+  "readme": "ERROR: No README data found!",
+  "_id": "secure-sphere@0.1.0"
 }
