--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "chromatic": "npx chromatic --project-token=chpt_5bf0a48f0aab671"
+    "chromatic": "npx chromatic --project-token=#PROJECT_TOKEN"
   },
   "dependencies": {
     "@types/node": "20.4.2",
